--- a/blog.html
+++ b/blog.html
@@ -60,17 +60,17 @@
 			<div class="col-sm-8 blog-main">
 				<div class="blog-post"><br />
 					<!---FIIRST BLOG POST -->
-					<a href="https://yourwebsitename.com/fun-activities-for-summer.html"><img src="images/fun-activities-for-summer.jpg" class="img-responsive" alt="fun-activities-for-summer" /></a>
-					<h2 align="center"><a class="headings" href="https://yourwebsitename.com/fun-activities-for-summer.html">10 Fun Activities for Summer</a></h2>
+					<a href="/fun-activities-for-summer.html"><img src="images/fun-activities-for-summer.jpg" class="img-responsive" alt="fun-activities-for-summer" /></a>
+					<h2 align="center"><a class="headings" href="/fun-activities-for-summer.html">10 Fun Activities for Summer</a></h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus, magna vitae rutrum ornare, orci nulla vestibulum quam, sit amet maximus turpis tellus sed ipsum. Suspendisse sem ligula, molestie sed euismod nec, consectetur quis diam. Mauris lobortis elit non rhoncus pellentesque. Nunc dictum nec tellus nec hendrerit...</p><br />
-					<a class="read-more" href="https://yourwebsitename.com/fun-activities-for-summer.html"><strong>Read Article</strong> <span class="glyphicon glyphicon-chevron-right"></span></a>
+					<a class="read-more" href="/fun-activities-for-summer.html"><strong>Read Article</strong> <span class="glyphicon glyphicon-chevron-right"></span></a>
 					<br /> <br />
 					<hr><br /> <br />
 					<!---SECOND BLOG POST -->
-					<a href="https://yourwebsitename.com/blog-post.html"><img src="images/blog-post-img.jpg" class="img-responsive" alt="" /></a>
-					<h2 align="center"><a class="headings" href="https://yourwebsitename.com/blog-post.html">Blog Post Heading</a></h2>
+					<a href="/blog-post.html"><img src="images/blog-post-img.jpg" class="img-responsive" alt="" /></a>
+					<h2 align="center"><a class="headings" href="/blog-post.html">Blog Post Heading</a></h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus, magna vitae rutrum ornare, orci nulla vestibulum quam, sit amet maximus turpis tellus sed ipsum. Suspendisse sem ligula, molestie sed euismod nec, consectetur quis diam. Mauris lobortis elit non rhoncus pellentesque. Nunc dictum nec tellus nec hendrerit...</p><br />
-					<a class="read-more" href="https://yourwebsitename.com/blog-post.html"><strong>Read Article</strong> <span class="glyphicon glyphicon-chevron-right"></span></a><br /> <br />
+					<a class="read-more" href="/blog-post.html"><strong>Read Article</strong> <span class="glyphicon glyphicon-chevron-right"></span></a><br /> <br />
 					<hr><br /> <br />
 				</div><!-- /.blog-post --><br />
 			</div><!-- /.blog-main -->
@@ -78,8 +78,8 @@
 				<div class="sidebar-module">
 					<h4>Blog Posts</h4>
 					<ol class="list-unstyled"><strong>
-							<li><a href="https://yourwebsitename.com/fun-activities-for-summer.html"">Blog Post Heading</a></li><br />
-                          <li><a href=" https://yourwebsitename.com/blog-post.html"">Blog Post Heading</a> </li> <br />
+							<li><a href="/fun-activities-for-summer.html"">Fun Activities for Summer</a></li><br />
+                          <li><a href="/blog-post.html"">All Blog Posts</a> </li> <br />
 						</strong></ol>
 				</div>
 				<!--- /.sidebar-module-->
