--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -17,6 +18,7 @@
 	<!--Favicon goes here -->
 	<link href="images/xyz-favicon.png" rel="icon">
 </head>
+
 <body>
 	<div id="top-banner">
 		<p class="contactnumber">Contact Number</p>
@@ -79,7 +81,7 @@
 					<h4>Blog Posts</h4>
 					<ol class="list-unstyled"><strong>
 							<li><a href="/fun-activities-for-summer.html"">Fun Activities for Summer</a></li><br />
-                          <li><a href="/blog-post.html"">All Blog Posts</a> </li> <br />
+              <li><a href="/blog-post.html"">Sample Blog Post</a> </li> <br />
 						</strong></ol>
 				</div>
 				<!--- /.sidebar-module-->
@@ -131,4 +133,5 @@
 		});
 	</script>
 </body>
+
 </html>
