--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta content="" name="description">
 	<!-- Meta Description -->
-	<title>Air Conditioners Home Page</title>
+	<title>Air Purifiers Home Page</title>
 	<!--CSS Stylesheets -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -19,12 +19,12 @@
 </head>
 <body>
 	<div id="top-banner">
-		<p class="contactnumber">Contact Number</p>
+		<!-- <p class="contactnumber">Contact Number</p> -->
 		<!--contact number of the company goes here-->
-		<div class="row">
-			<div align="center" class="col-md-6 col-md-offset-3">
-				<a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a>
-				<h1>Quality Air Conditioners</h1>
+		<!-- <div class="row"> -->
+			<!-- <div align="center" class="col-md-6 col-md-offset-3"> -->
+				<!-- <a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a> -->
+				<!-- <h1>Quality Air Purifiers</h1> -->
 			</div>
 			<!--end col-md-6-->
 		</div>
@@ -43,7 +43,7 @@
 		<!--- /.navbar-header-->
 		<div align="center" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/air-conditioners.html">AIR CONDITIONERS</a></li>
+				<li><a href="/air-Purifiers.html">AIR PURIFIERS</a></li>
 				<li><a href="/about.html">ABOUT</a></li>
 				<li><a href="/place-an-order.html">PLACE AN ORDER</a></li>
 				<li><a href="/blog.html">BLOG</a></li>
@@ -52,6 +52,10 @@
 		</div>
 	</nav>
 	<div class="carousel slide" data-ride="carousel" id="topcarousel">
+			<div align="center" class="col-md-6 col-md-offset-3">
+					<!-- <a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a> -->
+					<h1>Quality Air Purifiers</h1>
+				</div>
 		<!-- Indicators -->
 		<ol class="carousel-indicators">
 			<li class="active" data-slide-to="0" data-target="#topcarousel"></li>
@@ -84,7 +88,7 @@
 	</div>
 	<!--end of topcarousel-->
 	<div class="introtext">
-		<h1 align="center">MAIN HEADING GOES HERE</h1>
+		<h1 align="center">BREATHE EASY</h1>
 	</div>
 	<!---/.introtext-->
 	<div class="features">
@@ -92,22 +96,22 @@
 			<div align="center" class="row">
 				<div class="col-md-3 col-sm-6 col-xs-6">
 					<img alt="" src="images/benefits.png">
-					<h3>Benefit 1</h3>
+					<h3>99% Allergen Free</h3>
 				</div>
 				<!--end col-md-3-->
 				<div class="col-md-3 col-sm-6 col-xs-6">
 					<img alt="" src="images/benefits.png">
-					<h3>Benefit 2</h3>
+					<h3>Silent Running</h3>
 				</div>
 				<!--end col-md-3-->
 				<div class="col-md-3 col-sm-6 col-xs-6">
 					<img alt="" src="images/benefits.png">
-					<h3>Benefit 3</h3>
+					<h3>Eco Friendly</h3>
 				</div>
 				<!--end col-md-3-->
 				<div class="col-md-3 col-sm-6 col-xs-6">
 					<img alt="" src="images/benefits.png">
-					<h3>Benefit 4</h3>
+					<h3>1/2 the cost of AC</h3>
 				</div>
 				<!--end col-md-3-->
 			</div>
@@ -119,7 +123,7 @@
 	<hr>
 	<div align="center" class="videodiv">
 		<div class="videoheader">
-			<h2 align="center"><span style="color:yellow">XYZ COMPANY</span> IN UNDER 3 MINUTES</h2>
+			<h2 align="center"><span style="color:yellow">INSTALLATION</span> IN UNDER 3 HOURS</h2>
 		</div>
 		<!--- /.videoheader-->
 		<div class="videoresponsive center-block">
@@ -184,7 +188,7 @@
 		<div class="row">
 			<div class="col-md-2"></div>
 			<div align="center" class="col-md-4">
-				<a href="https://www.yourwebsitename.com/.html" rel="nofollow"><img alt="air-conditioners" class="img-responsive" src="images/view-products.jpg"></a>
+				<a href="https://www.yourwebsitename.com/.html" rel="nofollow"><img alt="air-Purifiers" class="img-responsive" src="images/view-products.jpg"></a>
 			</div>
 			<!--- /.col-md-->
 			<div align="center" class="col-md-4 blog">
@@ -211,7 +215,7 @@
 	<footer class="footer">
 		<div align="center" class="footerlinks">
 			<a href="/about.html">ABOUT</a>
-			<a href="/air-conditioners.html">AIR CONDITIONERS</a>
+			<a href="/air-conditioners.html">AIR PURIFIERS</a>
 			<a href="/place-an-order.html">PLACE AN ORDER</a>
 			<a href="/blog.html">BLOG</a>
 			<a href="/contact.html">CONTACT</a>
