--- a/air-conditioners.html
+++ b/air-conditioners.html
@@ -21,12 +21,11 @@
 </head>
 <body>
 	<div id="top-banner">
-		<p class="contactnumber">Contact Number</p>
+		<!-- <p class="contactnumber">Contact Number</p> -->
 		<!--contact number of the company goes here-->
 		<div class="row">
 			<div align="center" class="col-md-6 col-md-offset-3">
-				<a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a>
-				<h1>Quality Air Conditioners</h1>
+				<a href="https://occ-template-product.netlify.com/"><h1>Quality Air Purifiers</h1></a>
 			</div>
 			<!--end col-md-6-->
 		</div>
@@ -45,7 +44,7 @@
 		<!--- /.navbar-header-->
 		<div align="center" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/air-conditioners.html">AIR CONDITIONERS</a></li>
+				<li><a href="/air-conditioners.html">AIR PURIFIERS</a></li>
 				<li><a href="/about.html">ABOUT</a></li>
 				<li><a href="/place-an-order.html">PLACE AN ORDER</a></li>
 				<li><a href="/blog.html">BLOG</a></li>
@@ -297,7 +296,7 @@
 	<footer class="footer">
 		<div align="center" class="footerlinks">
 			<a href="/about.html">ABOUT</a>
-			<a href="/air-conditioners.html">AIR CONDITIONERS</a>
+			<a href="/air-conditioners.html">AIR PURIFIERS</a>
 			<a href="/place-an-order.html">PLACE AN ORDER</a>
 			<a href="/blog.html">BLOG</a>
 			<a href="/contact.html">CONTACT</a>
