--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 	</nav>
 	<div class="carousel slide" data-ride="carousel" id="topcarousel">
 			<div align="center" class="col-md-6 col-md-offset-3">
-					<!-- <a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a> -->
-					<h1>Quality Air Purifiers</h1>
+				<a href="https://occ-template-product.netlify.com/"><h1>Quality Air Purifiers</h1></a>
 				</div>
 		<!-- Indicators -->
 		<ol class="carousel-indicators">
