--- a/faqs.html
+++ b/faqs.html
@@ -6,7 +6,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta content="" name="description">
 	<!-- Meta Description -->
-	<title>Frequently Asked Questions About Air Conditioners</title>
+	<title>Frequently Asked Questions About Air Purifiers</title>
 	<!--CSS Stylesheets -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -86,12 +86,11 @@
 </head>
 <body>
 	<div id="top-banner">
-		<p class="contactnumber">Contact Number</p>
+		<!-- <p class="contactnumber">Contact Number</p> -->
 		<!--contact number of the company goes here-->
 		<div class="row">
 			<div align="center" class="col-md-6 col-md-offset-3">
-				<a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a>
-				<h1>Quality Air Conditioners</h1>
+				<a href="https://occ-template-product.netlify.com/"><h1>Quality Air Purifiers</h1></a>
 			</div>
 			<!--end col-md-6-->
 		</div>
@@ -110,7 +109,7 @@
 		<!--- /.navbar-header-->
 		<div align="center" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/air-conditioners.html">AIR CONDITIONERS</a></li>
+				<li><a href="/air-conditioners.html">AIR PURIFIERS</a></li>
 				<li><a href="/about.html">ABOUT</a></li>
 				<li><a href="/place-an-order.html">PLACE AN ORDER</a></li>
 				<li><a href="/blog.html">BLOG</a></li>
@@ -181,7 +180,7 @@
 	<footer class="footer">
 		<div align="center" class="footerlinks">
 			<a href="/about.html">ABOUT</a>
-			<a href="/air-conditioners.html">AIR CONDITIONERS</a>
+			<a href="/air-conditioners.html">AIR PURIFIERS</a>
 			<a href="/place-an-order.html">PLACE AN ORDER</a>
 			<a href="/blog.html">BLOG</a>
 			<a href="/contact.html">CONTACT</a>
