--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -17,18 +18,19 @@
 	<!--Favicon goes here -->
 	<link href="images/xyz-favicon.png" rel="icon">
 </head>
+
 <body>
 	<div id="top-banner">
 		<!-- <p class="contactnumber">Contact Number</p> -->
 		<!--contact number of the company goes here-->
 		<!-- <div class="row"> -->
-			<!-- <div align="center" class="col-md-6 col-md-offset-3"> -->
-				<!-- <a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a> -->
-				<!-- <h1>Quality Air Purifiers</h1> -->
-			</div>
-			<!--end col-md-6-->
-		</div>
-		<!--end row-->
+		<!-- <div align="center" class="col-md-6 col-md-offset-3"> -->
+		<!-- <a href="https://occ-template-product.netlify.com/"><img alt="xyz-logo" class="img-responsive" src="images/xyz-logo.jpg"></a> -->
+		<!-- <h1>Quality Air Purifiers</h1> -->
+	</div>
+	<!--end col-md-6-->
+	</div>
+	<!--end row-->
 	</div>
 	<!--end top-banner-->
 	<nav class="navbar navbar-default navbar-static-top" id="topnavbar" role="navigation">
@@ -51,10 +53,12 @@
 			</ul>
 		</div>
 	</nav>
+	<div align="center" class="main-title">
+			<a href="https://occ-template-product.netlify.com/">
+				<h1>Quality Air Purifiers</h1>
+			</a>
+		</div>
 	<div class="carousel slide" data-ride="carousel" id="topcarousel">
-			<div align="center" class="col-md-6 col-md-offset-3">
-				<a href="https://occ-template-product.netlify.com/"><h1>Quality Air Purifiers</h1></a>
-				</div>
 		<!-- Indicators -->
 		<ol class="carousel-indicators">
 			<li class="active" data-slide-to="0" data-target="#topcarousel"></li>
@@ -241,4 +245,5 @@
 		});
 	</script>
 </body>
+
 </html>
